--- a/index.html
+++ b/index.html
@@ -17,7 +17,16 @@
 </head>
 
 <body>
-
+  <header class="header">
+    <div class="logo-box"><img src="img/logo-white.png" alt="" class="logo"></div>
+  </header>
+  <div class="text-box">
+    <h1 class="heading-primary">
+      <span class="heading-primary-main">outdoors</span>
+      <span class="heading-primary-sub">is where life happens</span>
+    </h1>
+    <a href="#" class="btn btn-white">Discover out tours</a>
+  </div>
 </body>
 
 </html>
