--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <span class="heading-primary-main">outdoors</span>
       <span class="heading-primary-sub">is where life happens</span>
     </h1>
-    <a href="#" class="btn btn-white">Discover out tours</a>
+    <a href="#" class="btn btn-white btn-animated-move-in">Discover out tours</a>
   </div>
 </body>
 
